--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -7,3 +7,8 @@ httpx==0.28.1
 pydantic==2.10.6
 loguru==0.7.3
 schedule==1.2.2
+
+# Sprint 2: x402 + Limitless + testing
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
+anyio>=4.0.0
